# Jogo_tProg

./: .gitignore  CMakeLists.txt
Diagrama/: Diagrama_Jogo_2026.mdj
Include/: Ente.h  Entidade.h  Grafico.h  Jogador.h  Obstaculo.h  Personagem.h
Include/Core/: Jogo.h
Include/Core/Menus/: EstadoMenu.h  EstadoMenuPrincipal.h  Menu.h
Include/Elementos/: Botao.h
Include/Entidades/: Chao.h  Ente.h  Entidade.h  Projetil.h
Include/Entidades/Obstaculos/: Baril.h  Caixa.h  Espinho.h  Obstaculo.h  Plataforma.h
Include/Entidades/Personagens/: Personagem.h
Include/Entidades/Personagens/Inimigos/: Capitao.h  Esqueleto.h  Inimigo.h  Pirata.h
Include/Entidades/Personagens/Jogador/: Jogador.h
Include/Estados/: FaseEstado.h  GerenciadorEstado.h  MenuEstado.h  PauseEstado.h  State.h
Include/Fases/: Fase.h  Fase_1.h  Fase_2.h
Include/Gerenciadores/: Gerenciador_Colisoes.h  Gerenciador_Grafico.h
Include/Lista/: Lista.h  ListaEnt.h
Include/Listas/: Lista.h  ListaEnt.h
source/Core/: Jogo.cpp  main.cpp
source/Core/Menus/: EstadoMenu.cpp  EstadoMenuPrincipal.cpp  Menu.cpp
source/Elementos/: Botao.cpp
source/Entidades/: Chao.cpp  Ente.cpp  Entidade.cpp  Projetil.cpp
source/Entidades/Obstaculos/: Baril.cpp  Caixa.cpp  Espinho.cpp  Obstaculo.cpp  Plataforma.cpp
source/Entidades/Personagens/: Personagem.cpp
source/Entidades/Personagens/Inimigos/: Capitao.cpp  Esqueleto.cpp  Inimigo.cpp  Pirata.cpp
source/Entidades/Personagens/Jogador/: Jogador.cpp
source/Estados/: FaseEstado.cpp  GerenciadorEstado.cpp  MenuEstado.cpp  PauseEstado.cpp
source/Fases/: Fase.cpp  Fase_1.cpp  Fase_2.cpp
source/Gerenciadores/: Gerenciador_Colisoes.cpp  Gerenciador_Grafico.cpp
source/Listas/: ListaEnt.cpp
src/: Entidade.cpp  Grafico.cpp  Grafico.h  Jogador.cpp  Jogador.h  Obstaculo.cpp  Personagem.cpp  Personagem.h
src/Lista/: ListaEnt.cpp
